Added tags and split story into elements

--- a/assets/less/base/normalize.less
+++ b/assets/less/base/normalize.less
@@ -1,6 +1,6 @@
 /* ==========================================================================
 // NORMALIZE
-// Reference: http://github.com/necolas/normalize.css
+// Reference: http://github.com/necolas/normalize.css, http://callmenick.com/post/the-new-box-sizing-reset
 // =========================================================================*/
 
 // VARIABLES
