--- a/assets/less/base_modules/breadcrumbs.less
+++ b/assets/less/base_modules/breadcrumbs.less
@@ -22,7 +22,7 @@
 }
 
 .list__breadcrumb {
-    display: inline-block;
+    ._inline-block();
     ._clearfix();
     ._font-size (@BREADCRUMBS-FontSize);
 
@@ -72,7 +72,7 @@
         // overflow: hidden;
         // white-space: nowrap;
         // width: 100%;
-        // display: inline-block;
+        // ._inline-block();
     }
 
     .list__breadcrumb {
