--- a/assets/less/base_modules/tabs.less
+++ b/assets/less/base_modules/tabs.less
@@ -45,8 +45,8 @@
 
 .list__tabs {
     .list__item {
-        display: inline-block;
         float: left;
+        ._inline-block();
     }
 
     .list__link {
