--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -20,12 +20,14 @@
 @import "base_modules/badge.less";
 @import "base_modules/button.less";
 @import "base_modules/card.less";
+@import "base_modules/cite.less";
 //@import "base_modules/column.less";
 @import "base_modules/flash.less";
 @import "base_modules/focus.less";
 @import "base_modules/hovercard.less";
 @import "base_modules/form.less";
 @import "base_modules/icon.less";
+@import "base_modules/ident.less";
 @import "base_modules/image.less";
 @import "base_modules/label.less";
 @import "base_modules/links.less";
@@ -46,6 +48,7 @@
 @import "base_modules/tabs.less";
 @import "base_modules/tooltip.less";
 @import "base_modules/well.less";
+@import "base_modules/tags.less";
 @import "base_modules/toast.less";
 @import "base_modules/image.less";
 @import "base_modules/rte.less";
