--- a/assets/less/modules/ALLOY.less
+++ b/assets/less/modules/ALLOY.less
@@ -9,7 +9,7 @@
 // ----------------------------------------------------
 
 .logo {
-	display: inline-block;
+    ._inline-block();
 }
 
 .logo__image {
