--- a/content/Tests/nested-partials.hbs
+++ b/content/Tests/nested-partials.hbs
@@ -2,6 +2,7 @@
 title: This is a test page
 subtitle: Where I am trying out wether or not we can create dynamicly linked partials
 
+nav-thumb: "placeholder.jpg"
 nav-title: "Test Page"
 page-category: "tests"
 nav-text: "Nested Partials"
