--- a/content/_partials/input__radio.hbs
+++ b/content/_partials/input__radio.hbs
@@ -13,5 +13,6 @@
         {{#if item.tabindex}} tabindex="{{item.tabindex}}"{{/if}}
         {{#if item.accesskey}} accesskey="{{item.accesskey}}"{{/if}}
     />
+        <label class="faux__radio" for=""{{item.id}}"></label>
     </span>
 {{/this}}
