--- a/content/404.hbs
+++ b/content/404.hbs
@@ -2,6 +2,7 @@
 title: Oops!
 subtitle: Something went wrong...
 
+nav-thumb: "placeholder.jpg"
 nav-title: "404 Error"
 nav-text: "404 Error"
 nav-variant: "error"
