--- a/content/Components/tags.hbs
+++ b/content/Components/tags.hbs
@@ -1,10 +1,10 @@
 ---
-title: Input Groups
+title: Boxes
 
 nav-thumb: "placeholder.jpg"
-nav-title: "Input Groups"
-nav-text: "Input Groups"
-nav-variant: "input-groups"
+nav-title: "Tags"
+nav-text: "Tags"
+nav-variant: "tags"
 page-category: "components"
 ---
 
@@ -33,6 +33,8 @@ page-category: "components"
 
 		            <div class="section__body">
 				        <!-- code -->
+
+				        {{!> tag tag }}
 
 				        <!-- end of code -->
 			        </div>
