--- a/content/_partials/input__checkbox.hbs
+++ b/content/_partials/input__checkbox.hbs
@@ -12,5 +12,6 @@
         {{#if item.tabindex}} tabindex="{{item.tabindex}}"{{/if}}
         {{#if item.accesskey}} accesskey="{{item.accesskey}}"{{/if}}
     />
+        <label class="faux__checkbox" for=""{{item.id}}"></label>
     </span>
 {{/this}}
