--- a/content/_partials/input__datetime.hbs
+++ b/content/_partials/input__datetime.hbs
@@ -1,9 +1,9 @@
 {{#this}}
     <span class="form__input{{#if item.modifier}} form__input--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}{{#if item.disabled}} disabled{{/if}}">
     <input
-        type="search"
+        type="datetime"
         role="textbox"
-        class="input input--search"
+        class="input input--datetime"
         {{#if item.required}} required="required" aria-required="true"{{/if}}
         {{#if item.readonly}} readonly="readonly" aria-readonly="true"{{/if}}
         {{#if item.disabled}} disabled="disabled" aria-disabled="true"{{/if}}
