--- a/content/_partials/select.hbs
+++ b/content/_partials/select.hbs
@@ -1,6 +1,6 @@
 {{#this}}
 
-    <span class="form__input{{#if item.modifier}} form__input--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}">
+    <span class="form__input{{#if item.modifier}} form__input--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}{{#if item.disabled}} disabled{{/if}}">
 <select
     class="input input--select"
     {{#if item.multiple}} multiple="multiple"{{/if}}
