--- a/assets/less/base/normalize.less
+++ b/assets/less/base/normalize.less
@@ -185,7 +185,7 @@ form {
 
 fieldset {
     border: 1px solid @COLOR-GreyLight;
-    padding: 0.35em 0.625em 0.75em;
+    ._padding(@TYPE-LineHeight/2, @TYPE-FontSize);
     ._margin (0, 2);
 }
 
