--- a/content/Systems/forms.hbs
+++ b/content/Systems/forms.hbs
@@ -21,21 +21,22 @@ page-category: "systems"
 <!-- writings -->
 
 				<div class="page__body rte">
-					<form id="form-example-inline" class="form inline" role="" method="">
+					<form id="form-example-default" class="form" role="" method="">
 						<fieldset class="form__fieldset">
-						    <legend class="form__legend">Form Inline</legend>
+						    <legend class="form__legend">Form Default</legend>
 
-							{{> form__row form__row-inline}}
+							{{> form__row form__row }}
+
+
 
 							{{> button button-submit }}
 
 						</fieldset>
 					</form>
 
-
-					<form id="form-example-search" class="form inline" role="" method="">
+					<form id="form-example-inline" class="form inline" role="" method="">
 						<fieldset class="form__fieldset simple">
-						    <legend class="form__legend hidden-text">Form custom search example</legend>
+						    <legend class="form__legend">Form Inline</legend>
 
 							{{> form__row form__row-search--inline}}
 
@@ -43,11 +44,9 @@ page-category: "systems"
 
 					</form>
 
-
-
-					<form id="form-example-search" class="form inline" role="" method="">
+					<form id="form-example-split" class="form inline" role="" method="">
 						<fieldset class="form__fieldset simple">
-						    <legend class="form__legend hidden-text">Form text and submit button</legend>
+						    <legend class="form__legend hidden-text">Form Split</legend>
 
 							{{> form__row form__row-text}}
 
@@ -63,13 +62,13 @@ page-category: "systems"
 
 
 
-					<form id="form-example-json" class="form aligned" role="" method="">
+					<form id="form-example-fields" class="form aligned" role="" method="">
 
 						{{! form__hidden form__hidden }}
 
 
 						<fieldset class="form__fieldset">
-						    <legend class="form__legend">Aligned form via JSON</legend>
+						    <legend class="form__legend">Show me the fields</legend>
 
 							{{> form__row form__row-text}}
 							{{> form__row form__row-email}}
@@ -100,7 +99,7 @@ page-category: "systems"
 						{{! form__hidden form__hidden }}
 
 						<fieldset class="form__fieldset">
-						    <legend class="form__legend">Validation items via JSON</legend>
+						    <legend class="form__legend">Form Validation Examples</legend>
 
 							{{> form__row form__row-text--validated }}
 
@@ -178,55 +177,14 @@ page-category: "systems"
 
 					<form id="form-example-disabled" class="form aligned" role="" method="">
 						<fieldset class="form__fieldset">
-						    <legend class="form__legend">Disabled Inputs</legend>
+						    <legend class="form__legend">Form with Disabled Inputs</legend>
 
 							{{> form__row form__row-text--disabled}}
 
 							{{> form__row form__row-select--disabled}}
 
-							<div class="form__row offset">
-								<div class="form__group vertical">
-									<span class="group__item">
-										<input type="checkbox" class="form__input" checked="checked"
-											disabled="disabled" aria-disabled="true" />
-										<label for="InputSizeDisabled" class="label disabled"><span>Disabled Checkboxes</span></label>
-									</span>
-
-									<span class="group__item">
-										<input type="checkbox" class="form__input"
-											disabled="disabled" aria-disabled="true" />
-										<label for="InputSizeDisabled" class="label disabled"><span>Disabled Checkboxes</span></label>
-									</span>
-
-									<span class="group__item">
-										<input type="checkbox" class="form__input"
-											disabled="disabled" aria-disabled="true" />
-										<label for="InputSizeDisabled" class="label disabled"><span>Disabled Checkboxes</span></label>
-									</span>
-								</div>
-							</div>
-
-							<div class="form__row offset">
-								<div class="form__group vertical">
-									<span class="group__item">
-										<input type="radio" class="form__input" checked="checked"
-											disabled="disabled" aria-disabled="true" />
-										<label for="InputSizeDisabled" class="label"><span>Disabled Radio</span></label>
-									</span>
-
-									<span class="group__item">
-										<input type="radio" class="form__input"
-											disabled="disabled" aria-disabled="true" />
-										<label for="InputSizeDisabled" class="label"><span>Disabled Radio</span></label>
-									</span>
-
-									<span class="group__item">
-										<input type="radio" class="form__input"
-											disabled="disabled" aria-disabled="true" />
-										<label for="InputSizeDisabled" class="label"><span>Disabled Radio</span></label>
-									</span>
-								</div>
-							</div>
+							{{> form__row form__row-radio--disabled}}
+							{{> form__row form__row-checkbox--disabled}}
 
 							<div class="form__row">
 								<label for="InputSizeDisabled" class="label"><span>Input xsmall</span></label>
@@ -272,7 +230,7 @@ page-category: "systems"
 
 					<form id="form-example-checkboxes" class="form aligned" role="" method="">
 						<fieldset class="form__fieldset">
-						    <legend class="form__legend">Checkboxes</legend>
+						    <legend class="form__legend">Checkbox/Radio Layouts</legend>
 
 
 							<div class="form__row offset">
