--- a/content/Systems/grids.hbs
+++ b/content/Systems/grids.hbs
@@ -373,6 +373,35 @@ page-category: "systems"
 
 <!-- code -->
 
+
+<div class="w w--example">
+	<div class="g">
+		<div class="c__md-1"><h2>Grid's in Grid's (Test)</h2></div>
+	</div>
+
+    <div class="g">
+        <div class="c__lg--1-2"><div class="gex">1-2</div></div>
+        <div class="c__lg--1-2"><div class="gex">1-2</div></div>
+    </div>
+
+    <div class="g">
+		<div class="c__lg--1-2">
+			<div class="g"><div class="c--1-2"><div class="gex">1-2 (in 1-2)</div></div><div class="c--1-2"><div class="gex">1-2 (in 1-2)</div></div></div>
+		</div>
+		<div class="c__lg--1-2">
+            <div class="g"><div class="c--1-3"><div class="gex">1-2 (in 1-2)</div></div><div class="c--2-3"><div class="gex">2-3 (in 1-2)</div></div></div>
+		</div>
+	</div>
+    <div class="g">
+        <div class="c__lg--1-2">
+            <div class="g"><div class="c--1-4"><div class="gex">1-4 (in 1-2)</div></div><div class="c--3-4"><div class="gex">3-4 (in 1-2)</div></div></div>
+        </div>
+        <div class="c__lg--1-2">
+            <div class="g"><div class="c--3-5"><div class="gex">3-5 (in 1-2)</div></div><div class="c--2-5"><div class="gex">2-5 (in 1-2)</div></div></div>
+        </div>
+    </div>
+</div>
+
 <div class="w w--main">
 	<div class="g">
 	    <div class="c__lg--1">
