--- a/content/_partials/form__label.hbs
+++ b/content/_partials/form__label.hbs
@@ -1,11 +1,17 @@
 {{#this}}
-	{{#if content.text}}
+	{{#if content.for}}
 		<label
 			{{#if item.for}}for="{{item.for}}"{{/if}}
 			class="form__label{{#if item.modifier}} form__label--{{item.modifier}}{{/if}}
 			{{#if item.disabled}} disabled{{/if}}
 			{{#if item.hidden}} hidden-text{{/if}}">
+			{{#if content.icon}}{{#each content.icon}}{{#this}}{{>icon}}{{/this}}{{/each}}{{/if}}
 			<span>{{{content.text}}}</span>
 		</label>
+	{{else}}
+		<div class="form__label{{#if item.modifier}} form__label--{{item.modifier}}{{/if}}">
+			{{#if content.icon}}{{#each content.icon}}{{#this}}{{>icon}}{{/this}}{{/each}}{{/if}}
+            <span>{{{content.text}}}</span>
+		</div>
 	{{/if}}
 {{/this}}
