--- a/content/_partials/form__asterisk.hbs
+++ b/content/_partials/form__asterisk.hbs
@@ -1,3 +1,3 @@
 {{#this}}
-<abbr class="form__asterisk{{#if item.modifier}} form__asterisk--{{item.modifier}}{{/if}}" title="required">*</abbr>
+<abbr class="form__required{{#if item.modifier}} form__required--{{item.modifier}}{{/if}}" title="required">*</abbr>
 {{/this}}
