--- a/content/_partials/form__row.hbs
+++ b/content/_partials/form__row.hbs
@@ -1,153 +1,34 @@
 {{#this}}
     <div class="form__row{{#if item.modifier}} form__row--{{item.modifier}}{{/if}}{{#if item.offset}} offset{{/if}}{{#if item.disabled}} disabled{{/if}}
 ">
-
-    {{#if content.text}}
-        {{#this}}{{> form__label }}{{/this}}
-    {{/if}}
-
-    {{#if content.group}}
-        {{#each content.group}}
-            {{#this}}
-        <div class="form__group{{#if item.checkbox}} form__group--check{{/if}}{{#if item.inline}} inline{{/if}}{{#if item.vertical}} vertical{{/if}}">
-        {{#if content.type}}
-            {{#each content.type}}
-                {{#this}}
-                    {{> input }}
-                {{/this}}
-            {{/each}}
+        {{#if content.text}}
+            {{#this}}{{> form__label }}{{/this}}
         {{/if}}
+
+        <div class="form__control">
+            {{! bring in groups of inputs }}
+            {{#if content.group}}
+                {{#each content.group}}
+                    {{#this}}
+                       {{> input__group }}
+                    {{/this}}
+                {{/each}}
+            {{/if}}
+
+            {{!bring in single input }}
+            {{#if content.type}}
+                {{#each content.type}}
+                    {{#this}}
+                        {{> input }}
+                    {{/this}}
+                {{/each}}
+            {{/if}}
+
         </div>
-            {{/this}}
-        {{/each}}
-    {{/if}}
 
-    {{#if content.type}}
-        {{#each content.type}}
-
-            {{#if hidden}}
-                {{#each hidden}}
-                    {{#this}}
-                    {{> input__hidden }}
-                    {{/this}}
-                {{/each }}
-            {{/if}}
-
-            {{#if checkbox}}
-                <div class="form__group">
-                {{#each checkbox}}
-                    <span class="group__item">
-                        {{#this}}
-                        {{> input__checkbox }}
-                        {{/this}}
-                    </span>
-                {{/each}}
-                </div>
-            {{/if}}
-
-            {{#if radio}}
-                <div class="form__group">
-                {{#each radio}}
-                    <span class="group__item">
-                        {{#this}}
-                        {{> input__radio }}
-                        {{/this}}
-                    </span>
-                {{/each}}
-                </div>
-            {{/if}}
-
-            {{#if password}}
-                {{#each password}}
-                    {{#this}}
-                    {{> input__password }}
-                    {{/this}}
-                {{/each }}
-            {{/if}}
-
-            {{#if email}}
-                {{#each email}}
-                    {{#this}}
-                    {{> input__email }}
-                    {{/this}}
-                {{/each}}
-            {{/if}}
-
-            {{#if search}}
-                {{#each search}}
-                    {{#this}}
-                    {{> input__search }}
-                    {{/this}}
-                {{/each}}
-            {{/if}}
-
-            {{#if tel}}
-                {{#each tel}}
-                    {{#this}}
-                    {{> input__tel }}
-                    {{/this}}
-                {{/each}}
-            {{/if}}
-
-            {{#if text}}
-                {{#each text}}
-                    {{#this}}
-                    {{> input__text }}
-                    {{/this}}
-                {{/each}}
-            {{/if}}
-
-            {{#if url}}
-                {{#each url}}
-                    {{#this}}
-                    {{> input__url }}
-                    {{/this}}
-                {{/each}}
-            {{/if}}
-
-            {{#if select}}
-                {{#each select}}
-                    {{#this}}
-                    {{> select }}
-                    {{/this}}
-                {{/each}}
-            {{/if}}
-
-            {{#if textarea}}
-                {{#each textarea}}
-                    {{#this}}
-                    {{> textarea }}
-                    {{/this}}
-                {{/each}}
-            {{/if}}
-
-            {{#if form__text}}
-                {{#each form__text}}
-                    {{#this}}
-                    {{> form__text }}
-                    {{/this}}
-                {{/each}}
-            {{/if}}
-
-        {{/each }}
-    {{/if}}
-
-    {{#if item.required}}
-        {{#this}}{{> form__asterisk }}{{/this}}
-    {{/if}}
-
-    {{#if actions}}
-        {{#each actions}}
-            {{#if buttons}}
-                {{#each buttons}}
-                    {{#this}}
-                    {{> button }}
-                    {{/this}}
-                {{/each }}
-            {{/if}}
-        {{/each }}
-    {{/if}}
-
+        {{#if item.required}}
+            {{#this}}{{> form__asterisk }}{{/this}}
+        {{/if}}
     </div>
 
 {{/this}}
