--- a/content/_partials/input__email.hbs
+++ b/content/_partials/input__email.hbs
@@ -1,10 +1,9 @@
 {{! http://html5doctor.com/html5-forms-input-types/#input-email }}
 {{#this}}
-    <span class="form__input{{#if item.modifier}} form__input--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}{{#if item.disabled}} disabled{{/if}}">
     <input
         type="email"
         role="textbox"
-        class="input input--email"
+        class="input__field input__field--email"
         {{#if item.multiple}} multiple="multiple"{{/if}}
         {{#if item.required}} required="required" aria-required="true"{{/if}}
         {{#if item.readonly}} readonly="readonly" aria-readonly="true"{{/if}}
@@ -19,5 +18,4 @@
         {{#if content.placeholder}} placeholder="{{content.placeholder}}"{{/if}}
         {{#if content.value}} value="{{content.value}}"{{/if}}
     />
-    </span>
 {{/this}}
