--- a/content/_partials/input__radio.hbs
+++ b/content/_partials/input__radio.hbs
@@ -1,9 +1,7 @@
 {{#this}}
-
-    <span class="form__input{{#if item.modifier}} form__input--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}{{#if item.disabled}} disabled{{/if}}">
     <input
         type="radio"
-        class="input input--radio"
+        class="input__field input__field--radio"
         {{#if item.checked}} checked="checked" aria-checked="true"{{/if}}
         {{#if item.required}} required="required" aria-required="true"{{/if}}
         {{#if item.disabled}} disabled="disabled" aria-disabled="true"{{/if}}
@@ -13,6 +11,5 @@
         {{#if item.tabindex}} tabindex="{{item.tabindex}}"{{/if}}
         {{#if item.accesskey}} accesskey="{{item.accesskey}}"{{/if}}
     />
-        <label class="faux__radio" for=""{{item.id}}"></label>
-    </span>
+        <label class="input__faux input__faux--radio" for=""{{item.id}}"></label>
 {{/this}}
