--- a/content/_partials/select.hbs
+++ b/content/_partials/select.hbs
@@ -1,8 +1,7 @@
 {{#this}}
 
-    <span class="form__input{{#if item.modifier}} form__input--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}{{#if item.disabled}} disabled{{/if}}">
 <select
-    class="input input--select"
+    class="input__field input__field--select"
     {{#if item.multiple}} multiple="multiple"{{/if}}
     {{#if item.required}} required="required" aria-required="true"{{/if}}
     {{#if item.disabled}} disabled="disabled" aria-disabled="true"{{/if}}
@@ -34,5 +33,4 @@
     {{/if}}
 
 </select>
-    </span>
 {{/this}}
