--- a/content/_partials/textarea.hbs
+++ b/content/_partials/textarea.hbs
@@ -3,8 +3,8 @@
         type="text"
         role="textbox"
         aria-multiline="true"
-        class="form__input
-            {{#if item.modifier}} form__input--{{item.modifier}}{{/if}}
+        class="input__field
+            {{#if item.modifier}} input__field--{{item.modifier}}{{/if}}
             {{#if item.size}} {{item.size}}{{/if}}"
         {{#if item.required}} required="required" aria-required="true"{{/if}}
         {{#if item.readonly}} readonly="readonly" aria-readonly="true"{{/if}}
