--- a/content/_partials/input.hbs
+++ b/content/_partials/input.hbs
@@ -1,7 +1,15 @@
 {{#this}}
-    <span class="input{{#if item.modifier}} input--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}{{#if item.disabled}} disabled{{/if}}">
 
-     {{> inputs }}
+    {{#if buttons}}
+        {{#each buttons}}
+            {{#this}}
+                {{> button }}
+            {{/this}}
+        {{/each}}
 
-    </span>
+    {{else}}
+        <span class="input{{#if item.modifier}} input--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}{{#if item.disabled}} disabled{{/if}}">
+            {{> input__choose }}
+        </span>
+    {{/if}}
 {{/this}}
