--- a/content/_partials/input__checkbox.hbs
+++ b/content/_partials/input__checkbox.hbs
@@ -1,4 +1,13 @@
 {{#this}}
+
+    {{#if content.labels}}
+        {{#each content.labels}}
+            {{#this}}
+                {{> input__label }}
+            {{/this}}
+        {{/each}}
+    {{/if}}
+
     <input
         type="checkbox"
         class="input__field input_field--checkbox"
@@ -12,5 +21,13 @@
         {{#if item.accesskey}} accesskey="{{item.accesskey}}"{{/if}}
     />
         <label class="input__faux input__faux--checkbox" for=""{{item.id}}"></label>
+
+    {{#if content.notes}}
+        {{#each content.notes}}
+            {{#this}}
+                {{> input__note }}
+            {{/this}}
+        {{/each}}
+    {{/if}}
 
 {{/this}}
