--- a/content/_partials/input__choose.hbs
+++ b/content/_partials/input__choose.hbs
@@ -1,96 +1,83 @@
 {{#this}}
-    {{#if checkbox}}
-        {{#each checkbox}}
+
+    {{#if checkboxes}}
+        {{#each checkboxes}}
             {{#this}}
                 {{> input__checkbox }}
             {{/this}}
         {{/each}}
     {{/if}}
 
-    {{#if radio}}
-        {{#each radio}}
+    {{#if radios}}
+        {{#each radios}}
             {{#this}}
                 {{> input__radio }}
             {{/this}}
         {{/each}}
     {{/if}}
 
-    {{#if actions}}
-    {{else}}
-        {{#this}}
-            {{> form__label }}
-        {{/this}}
-    {{/if}}
-
-    {{#if password}}
-        {{#each password}}
+    {{#if passwords}}
+        {{#each passwords}}
             {{#this}}
                 {{> input__password }}
             {{/this}}
         {{/each }}
     {{/if}}
 
-    {{#if email}}
-        {{#each email}}
+    {{#if emails}}
+        {{#each emails}}
             {{#this}}
                 {{> input__email }}
             {{/this}}
         {{/each}}
     {{/if}}
 
-    {{#if search}}
-        {{#each search}}
+    {{#if searches}}
+        {{#each searches}}
             {{#this}}
                 {{> input__search }}
             {{/this}}
         {{/each}}
     {{/if}}
 
-    {{#if tel}}
-        {{#each tel}}
+    {{#if tels}}
+        {{#each tels}}
             {{#this}}
                 {{> input__tel }}
             {{/this}}
         {{/each}}
     {{/if}}
 
-    {{#if text}}
-        {{#each text}}
+    {{#if texts}}
+        {{#each texts}}
             {{#this}}
                 {{> input__text }}
             {{/this}}
         {{/each}}
     {{/if}}
 
-    {{#if url}}
-        {{#each url}}
+    {{#if urls}}
+        {{#each urls}}
             {{#this}}
                 {{> input__url }}
             {{/this}}
         {{/each}}
     {{/if}}
 
-    {{#if select}}
-        {{#each select}}
+    {{#if selects}}
+        {{#each selects}}
             {{#this}}
                 {{> select }}
             {{/this}}
         {{/each}}
     {{/if}}
 
-    {{#if textarea}}
-        {{#each textarea}}
+    {{#if textareas}}
+        {{#each textareas}}
             {{#this}}
                 {{> textarea }}
             {{/this}}
         {{/each}}
     {{/if}}
 
-    {{#if note}}
-        {{#each note}}
-            {{#this}}
-                {{> input__note }}
-            {{/this}}
-        {{/each}}
-    {{/if}}
 {{/this}}
