--- a/content/_partials/input__email.hbs
+++ b/content/_partials/input__email.hbs
@@ -1,5 +1,14 @@
 {{! http://html5doctor.com/html5-forms-input-types/#input-email }}
 {{#this}}
+
+    {{#if content.labels}}
+        {{#each content.labels}}
+            {{#this}}
+                {{> input__label }}
+            {{/this}}
+        {{/each}}
+    {{/if}}
+
     <input
         type="email"
         role="textbox"
@@ -18,4 +27,13 @@
         {{#if content.placeholder}} placeholder="{{content.placeholder}}"{{/if}}
         {{#if content.value}} value="{{content.value}}"{{/if}}
     />
+
+    {{#if content.notes}}
+        {{#each content.notes}}
+            {{#this}}
+                {{> input__note }}
+            {{/this}}
+        {{/each}}
+    {{/if}}
+
 {{/this}}
