--- a/content/_partials/input__group.hbs
+++ b/content/_partials/input__group.hbs
@@ -1,7 +1,7 @@
 {{#this}}
     <div class="input__group{{#if item.checkbox}} input__group--check{{/if}}{{#if item.inline}} inline{{/if}}{{#if item.vertical}} vertical{{/if}}">
-        {{#if content.type}}
-            {{#each content.type}}
+        {{#if content.inputs}}
+            {{#each content.inputs}}
                 {{#this}}
                     {{> input }}
                 {{/this}}
