--- a/content/_partials/input__range.hbs
+++ b/content/_partials/input__range.hbs
@@ -1,4 +1,13 @@
 {{#this}}
+
+    {{#if content.labels}}
+        {{#each content.labels}}
+            {{#this}}
+                {{> input__label }}
+            {{/this}}
+        {{/each}}
+    {{/if}}
+
     <input
         type="range"
         role="textbox"
@@ -17,4 +26,13 @@
         {{#if content.placeholder}} placeholder="{{content.placeholder}}"{{/if}}
         {{#if content.value}} value="{{content.value}}"{{/if}}
     />
+
+    {{#if content.notes}}
+        {{#each content.notes}}
+            {{#this}}
+                {{> input__note }}
+            {{/this}}
+        {{/each}}
+    {{/if}}
+
 {{/this}}
